--- a/style.css
+++ b/style.css
@@ -181,6 +181,9 @@ nav a:focus {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  background: url('./icons/working-code.jpg');
+  background-position: center;
+  background-size: cover;
 }
 
 .about-main {
@@ -198,7 +201,15 @@ nav a:focus {
   font-weight: 600;
   border-bottom: 3px solid;
   padding: 0 0.2em 0.2em 0.2em;
+  padding: 1em;
   margin-bottom: 1em;
+  background-color:   rgba(56, 56, 56, 0.6) ;
+}
+
+.about-text {
+  padding: 1em;
+  background-color:   rgba(56, 56, 56, 0.6) ;
+  color: #fff;
 }
 
 .about-text-description {
@@ -209,6 +220,7 @@ nav a:focus {
   font-size: 1.1rem;
   border: 4px dotted #fff;
   padding: 1em;
+
 }
 
 .skills-section {
