--- a/style.css
+++ b/style.css
@@ -43,6 +43,11 @@ i {
   transition: linear 0.5s;
 }
 
+.link {
+  text-decoration: underline;
+  color: blue;
+}
+
 header {
   width: 100%;
   padding: 0.94em 0;
@@ -50,6 +55,7 @@ header {
   position: fixed;
   top: 0;
   transition: 0.4s 0s ease-in;
+  z-index: 2;
 }
 
 .section-avatar {
@@ -211,16 +217,15 @@ nav a:focus {
 .about-title {
   font-size: 1.5rem;
   font-weight: 600;
-  border-bottom: 3px solid;
+  text-align: center;
   padding: 0 0.2em 0.2em 0.2em;
   padding: 1em;
-  margin-bottom: 1em;
-  background-color: rgba(56, 56, 56, 0.6);
+  margin-bottom: .6em;
 }
 
 .about-text {
   padding: 1em;
-  background-color: rgba(56, 56, 56, 0.6);
+  background-color: rgba(56, 56, 56, 0.7);
   color: #fff;
 }
 
@@ -434,6 +439,39 @@ textarea {
   transform: rotate(-45deg) translate(35px, 35px);
 }
 
+.project-section {
+  width: 100%;
+  justify-content: space-evenly;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  color: #000;
+}
+
+.project-card {
+  width: 70%;
+  display: flex;
+  padding: 1em;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.project-text {
+  padding: .2em 1em;
+  text-align: justify;
+  font-size: 15px;
+}
+
+.project-text h3 {
+  width: max-content;
+  border-bottom: 2px solid #000;
+  padding-right: .5em;
+  margin-bottom: .5em;
+}
+
+iframe {
+  border: none;
+}
+
 /* -- hamburger menu -- */
 
 @media only screen and (max-width: 600px) {
@@ -551,6 +589,21 @@ textarea {
   }
   .erase {
     pointer-events: none;
+  }
+
+  .project-card {
+    width: 100%;
+    margin: 1em 0;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .project-text {
+    padding: 0px;
+  }
+  iframe, .project-img {
+    width: 150px !important;
+    height: 100px !important;
   }
 }
 @media (hover: hover) {
